# audio-kirtan-recognizer

./: README.md  Sample02_segments  Sample03_segments  main.py  pyproject.toml  requirements.txt
asr/: transcribe.py
data/anand_sahib/sample_01/: Sample01_verse_segments
