[tool.poetry]
name = "audio-kirtan-recognizer"
version = "0.1.0"
description = ""
authors = ["Balwinder Kaur <bkaurca@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
gcloud = "0.18.3"
google-cloud-speech = "2.14.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
